# promptshield

./: .gitignore  README.md  package-lock.json  render.yaml
.github/workflows/: ci.yml  docker.yml
PS Website/: index.html
api/: alembic.ini  main.py  requirements-prod.txt  requirements.txt  test_analytics.db  test_custom_rules.db
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_add_rule_source.py
api/alerts/: webhooks.py
api/middleware/: rate_limiter.py
api/models/: database.py  schemas.py
api/routes/: analytics.py  apps.py  events.py  rules.py  scan.py  stats.py
api/rules/: extraction.yaml  injection.yaml  jailbreak.yaml
api/scanner/: custom_rules.py  engine.py  ml_classifier.py  rule_engine.py
api/tests/: test_analytics.py  test_custom_rules.py  test_ml_classifier.py  test_rule_engine.py
dashboard/: package-lock.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: AppManager.jsx  AttackFeed.jsx  BreakdownChart.jsx  RulesList.jsx  StatsCards.jsx  TimeseriesChart.jsx
deploy/: docker-compose.yml
sdk/: README.md  pyproject.toml  test_shield.py
sdk/promptshield/: __init__.py
